tests/fixtures/invalid/round_bytes_set.py
# Cannot call round() with Bytes, Set[int]
x = round(b"hello", {1, 2, 3})
